--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,13 @@ export(interpolate)
 export(makeUUID)
 export(readGET)
 export(readPOST)
+export(respond)
+export(respond400)
+export(respond404)
+export(respondBinary)
 export(respondHTML)
+export(respondJSON)
+export(respondPDF)
+export(respondPNG)
+export(respondTEXT)
+export(setMessageSink)
