added missing documentation and exposure for templateHTML function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ export(respondJSON)
 export(respondPDF)
 export(respondPNG)
 export(respondTEXT)
+export(respondTemplateHTML)
 export(setMessageSink)
