compiled documentation and method exposure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(readPOST)
 export(respond)
 export(respond400)
 export(respond404)
+export(respond500)
 export(respondBinary)
 export(respondHTML)
 export(respondJSON)
