svg response and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(respondHTML)
 export(respondJSON)
 export(respondPDF)
 export(respondPNG)
+export(respondSVG)
 export(respondTEXT)
 export(respondTemplateHTML)
 export(setMessageSink)
